--- a/docker/app-scheduler/Dockerfile
+++ b/docker/app-scheduler/Dockerfile
@@ -3,9 +3,9 @@ MAINTAINER "Christoph Fabianek" christoph@ownyourdata.eu
 
 RUN cd /srv/shiny-server \
         && rm -rf * \
-        && git clone https://github.com/OwnYourData/app-bank.git \ 
-        && mv app-bank/* . \
-        && rm -r app-bank \
+        && git clone https://github.com/OwnYourData/app-scheduler.git \ 
+        && mv app-scheduler/* . \
+        && rm -r app-scheduler \
         && R -e "source('init.r')"
 
 EXPOSE 3838
